# WISE-Lab-Frequency-Detector-Tuner-Test-Bed

./: .gitignore  README.md  RUNBOOK.md
rpi/freq_detect_test/src/: _kiss_fft_guts.h  main.c  yin.h
rpi/freq_detect_wasm/freq_detect_embed/: adc.wit
rpi/freq_detect_wasm/freq_detect_embed/src/: kiss_fft.c  kiss_fft.h  main.c  math.h  shim.h  stdlib.h  string.h  tuner.wasm  wasm_libc.c
rpi/freq_detect_wasm/freq_detect_embed/wasm_component/: tuner.component.wasm  tuner.wasm  tuner_embed.wasm
rpi/freq_detect_wasm/freq_detect_embed/wit_gen/: host.c  host.h
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/: Cargo.toml  link.map  virt.dtb  virt.dts
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/adc_embed_nostd/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/adc_embed_nostd/src/: bridge.c  lib.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/blinky_embed/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/blinky_embed/src/: lib.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/blinky_embed_nostd/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/blinky_embed_nostd/src/: bridge.c  lib.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/c-api/include/wasmtime/: extern.h
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/cli-flags/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/cli-flags/src/: lib.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/environ/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/environ/src/: component.rs  module_artifacts.rs  types.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/environ/src/compile/: module_artifacts.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/environ/src/component/: types.rs  types_builder.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/wasm-crimp/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/wasm-crimp/src/: events.rs  io.rs  lib.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/wasm-crimp/src/events/: common_events.rs  component_events.rs  core_events.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/wasmtime/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/wasmtime/src/: compile.rs  config.rs  engine.rs  runtime.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/crates/wasmtime/src/engine/: serialization.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/pulley_exp_wasmtime_nostd/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/pulley_exp_wasmtime_nostd/src/: lib.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/qemu_rust_uart/: Cargo.toml  linker.ld
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/qemu_rust_uart/src/: main.rs  start.S
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/rpi_embed/: Cargo.toml  build.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/rpi_embed/divide_prog/: divide.wasm  divide.wat
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/rpi_embed/src/: bridge.c  main.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/src/: commands.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/src/commands/: replay.rs  run.rs  serve.rs  wizer.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/tests/all/: main.rs  rr.rs
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/wasmtime-nostd/: Cargo.toml
rpi/freq_detect_wasm/freq_detect_pulley_embed/wasmtime-rr-prototyping/wasmtime-nostd/src/: lib.rs
(+30 files in other folders)
