[package]
name = "rpi_embed"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"

[features]
default = ["rr"]
alloc = []
rr = [
  "wasmtime/rr"
]

[dependencies.wasmtime]
path = "../crates/wasmtime"
default-features = false
features = [
    "runtime",
    "component-model",
    "cranelift",
    "std",
    "gc-null",
]


[profile.release]
panic = "abort"
