[package]
name = "wasm-crimp"
authors = ["Arjun Ramesh"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmtime-rr"
description = "Record-replay interface for Wasm modules and components"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wasmtime-environ = { workspace = true, features = ["component-model"] }
serde = { workspace = true }
serde_derive = { workspace = true }
postcard = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
cfg-if = { workspace = true }

[features]
std = ["postcard/use-std", "wasmtime-environ/std"]
